sw/source/uibase/uno/unotxdoc.cxx
@@ -2580,6 +2580,10 @@ sal_Int32 SAL_CALL SwXTextDocument::getRendererCount(
         }
     }
     OSL_ENSURE( nRet >= 0, "negative number of pages???" );
+    // tdf#144989 the layout is complete now - prevent DoIdleJobs() from
+    // messing it up, particulary SwDocUpdateField::MakeFieldList_() unhiding
+    // sections
+    pDoc->getIDocumentTimerAccess().BlockIdling();
 
     return nRet;
 }
@@ -3004,6 +3008,8 @@ void SAL_CALL SwXTextDocument::render(
     {
         m_pRenderData.reset();
         m_pPrintUIOptions.reset();
+        // tdf#144989 enable DoIdleJobs() again after last page
+        pDoc->getIDocumentTimerAccess().UnblockIdling();
     }
 }
 
